--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "pnpm": ">=7.0.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 4444",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "shot": "tsx scripts/shot.ts"
   },
   "dependencies": {
     "ahooks": "^3.7.2",
@@ -44,6 +45,8 @@
     "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.26.0",
     "jsdom": "^20.0.0",
+    "playwright": "^1.28.0",
+    "tsx": "^3.12.1",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.4",
